--- a/IMKit/src/main/res/layout/rc_picsel_grid_camera.xml
+++ b/IMKit/src/main/res/layout/rc_picsel_grid_camera.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<io.rong.imkit.widget.SquareLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="127dp">
@@ -9,24 +9,28 @@
         android:layout_height="match_parent"
         android:background="#353535">
 
-        <ImageView
-            android:id="@+id/pic_camera"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="33dp"
-            android:src="@drawable/rc_grid_camera"/>
+            android:layout_centerInParent="true"
+            android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/pic_camera"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="12dp"
-            android:text="@string/rc_picsel_take_picture"
-            android:textColor="@android:color/white"
-            android:textSize="12sp"/>
+            <ImageView
+                android:id="@+id/pic_camera"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/rc_grid_camera"/>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="12dp"
+                android:text="拍摄照片"
+                android:textColor="@android:color/white"
+                android:textSize="12sp"/>
+        </LinearLayout>
     </RelativeLayout>
 
     <ImageButton
@@ -34,5 +38,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/rc_selector_grid_camera_mask"/>
-
-</FrameLayout>
+</io.rong.imkit.widget.SquareLayout>
