--- a/IMKit/src/main/res/layout/rc_picsel_grid_item.xml
+++ b/IMKit/src/main/res/layout/rc_picsel_grid_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<io.rong.imkit.widget.SquareLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="127dip">
@@ -28,4 +28,4 @@
 
     </RelativeLayout>
 
-</FrameLayout>
+</io.rong.imkit.widget.SquareLayout>
