--- a/IMKit/src/main/res/values/rc_strings.xml
+++ b/IMKit/src/main/res/values/rc_strings.xml
@@ -96,6 +96,7 @@
     <string name="rc_info_forbidden_to_talk">您当前在群组中被禁言</string>
     <string name="rc_forbidden_in_chatroom">你已被禁言，不能发送消息</string>
     <string name="rc_kicked_from_chatroom">你已被踢出聊天室</string>
+    <string name="rc_join_chatroom_failure">加入聊天室失败</string>
 
     <string name="rc_send_format">发送(%1$s)</string>
     <string name="rc_yesterday_format">昨天 %1$s</string>
@@ -137,8 +138,10 @@
     <string name="rc_picprev_origin_size">原图(%s)</string>
     <string name="rc_picprev_select">选择</string>
 
+
     <string name="rc_quit_custom_service">客服已结束</string>
     <string name="rc_init_failed">连接客服失败</string>
+
     <string name="rc_notification_ticker_text">您有了一条新消息</string>
     <string name="rc_notification_new_msg">%1$s发来了%2$d条消息</string>
     <string name="rc_notification_new_plural_msg">%1$d个联系人发来了%2$d条消息</string>
