--- a/IMKit/src/main/res/layout/rc_picprev_activity.xml
+++ b/IMKit/src/main/res/layout/rc_picprev_activity.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <io.rong.imkit.activity.HackyViewPager
+    <io.rong.imkit.widget.HackyViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
