--- a/IMKit/src/main/res/values/rc_config.xml
+++ b/IMKit/src/main/res/values/rc_config.xml
@@ -18,5 +18,8 @@
 
     <!-- 是否开启，在会话界面下拉时，拉取云端历史消息 -->
     <!-- 此功能要开通对应服务器，才可使用-->
-    <bool name="rc_enable_get_remote_history_message">true</bool>
+    <bool name="rc_enable_get_remote_history_message">false</bool>
+
+    <!-- 默认图片保存路径，在会话界面查看大图，长按时选择保存，会使用这个配置-->
+    <string name="rc_image_default_saved_path">/RongCloud/Image/</string>
 </resources>
