--- a/IMKit/src/main/res/values/rc_strings.xml
+++ b/IMKit/src/main/res/values/rc_strings.xml
@@ -74,7 +74,7 @@
     <string name="rc_pub_service_info_unfollow">取消关注</string>
     <string name="rc_pub_service_info_account">公众号：%1$s</string>
 
-    <string name="rc_notice_network_unavailable">当前网络不可用</string>
+    <string name="rc_notice_network_unavailable">网络连接不可用</string>
     <string name="rc_notice_disconnect">无法连接到服务器</string>
     <string name="rc_notice_tick">该帐号已经在其他设备登录</string>
     <string name="rc_notice_connecting">正在连接服务器</string>
@@ -137,6 +137,19 @@
     <string name="rc_picprev_origin">原图</string>
     <string name="rc_picprev_origin_size">原图(%s)</string>
     <string name="rc_picprev_select">选择</string>
+
+    <!-- LargePictureActivity -->
+    <string name="rc_save_picture">保存图片</string>
+    <string name="rc_save_picture_at">图片保存在%s</string>
+    <string name="rc_src_file_not_found">源文件不存在</string>
+
+    <string name="rc_confirm">确认</string>
+    <string name="rc_cancel">取消</string>
+
+    <string name="rc_permission_grant_needed">您需要在设置中打开权限</string>
+    <string name="rc_permission_microphone">（麦克风）。</string>
+    <string name="rc_permission_microphone_and_camera">（麦克风，相机）。</string>
+    <string name="rc_permission_camera">（相机）。</string>
 
 
     <string name="rc_quit_custom_service">客服已结束</string>
